# warehouse-robot

./: .env  Dockerfile  docker-compose.yaml  requirements.txt  tugbot_style_ai_warehouse.sdf  websocket.ign
.devcontainer/: devcontainer.json
docker/: entrypoint.sh
ros2_ws/src/cognitive_amr_description/: CMakeLists.txt  package.xml
ros2_ws/src/cognitive_amr_description/config/: laser_merger.yaml
ros2_ws/src/cognitive_amr_description/launch/: laser_merger.launch.py
ros2_ws/src/cognitive_amr_description/urdf/: base.xacro  robot.urdf.xacro  ros2_control.xacro  sensors.xacro  wheels.xacro
ros2_ws/src/cognitive_amr_gazebo/: CMakeLists.txt  package.xml  setup.py
ros2_ws/src/cognitive_amr_gazebo/cognitive_amr_gazebo/: laser_merger.py  task_dispatcher.py
ros2_ws/src/cognitive_amr_gazebo/config/: controllers.yaml  laser_merger.yaml  nav2_params.yaml  tasks.yaml  waypoints.yaml
ros2_ws/src/cognitive_amr_gazebo/launch/: simulation.launch.py
ros2_ws/src/cognitive_amr_gazebo/maps/: warehouse_map.yaml
ros2_ws/src/cognitive_amr_gazebo/worlds/: tugbot_style_ai_warehouse.sdf  warehouse.world
ros2_ws/src/linorobot2/linorobot2_description/meshes/customMeshes/: Chasis.stl  bottomLidar.stl  casterWheel.stl  driveWheel.stl  topLidar.stl
ros2_ws/src/linorobot2/linorobot2_description/urdf/: 2wd_properties.urdf.xacro
ros2_ws/src/linorobot2/linorobot2_description/urdf/mech/: base.urdf.xacro  caster_wheel.urdf.xacro  wheel.urdf.xacro
ros2_ws/src/linorobot2/linorobot2_description/urdf/robots/: 2wd.urdf.xacro
ros2_ws/src/linorobot2/linorobot2_description/urdf/sensors/: depth_sensor.urdf.xacro  laser.urdf.xacro  plugins.urdf.xacro
